--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
     "babel-loader": "9.1.3",
+    "bootstrap": "5.3.2",
+    "css-loader": "6.9.1",
     "react": "18.2.0",
+    "react-bootstrap": "2.10.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.21.3",
+    "style-loader": "3.3.4",
     "webpack": "5.90.0"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "html-webpack-plugin": "5.6.0",
+    "react-refresh": "^0.14.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "4.15.1"
   }
