--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack serve --config ./config/webpack.config.js",
-    "build": "npx webpack --config ./config/webpack.config.js",
+    "start": "node index",
+    "build": "npx webpack --config ./config/webpack.production.js",
+    "serve": "npx webpack serve --config ./config/webpack.config.js", 
+    "lint": "npx eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yelby",
@@ -17,6 +19,9 @@
     "babel-loader": "9.1.3",
     "bootstrap": "5.3.2",
     "css-loader": "6.9.1",
+    "dotenv": "16.4.1",
+    "express": "4.18.2",
+    "file-loader": "6.2.0",
     "react": "18.2.0",
     "react-bootstrap": "2.10.0",
     "react-dom": "18.2.0",
@@ -25,10 +30,16 @@
     "webpack": "5.90.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "7.23.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "eslint": "8.56.0",
+    "eslint-plugin-react": "7.33.2",
     "html-webpack-plugin": "5.6.0",
     "react-refresh": "^0.14.0",
+    "terser-webpack-plugin": "5.3.10",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "4.15.1"
+    "webpack-dev-middleware": "7.0.0",
+    "webpack-dev-server": "4.15.1",
+    "webpack-hot-middleware": "2.26.0"
   }
 }
