--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index",
     "build": "npx webpack --config ./config/webpack.production.js",
-    "serve": "npx webpack serve --config ./config/webpack.config.js", 
+    "serve": "npx webpack serve --config ./config/webpack.config.js",
     "lint": "npx eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,9 +22,12 @@
     "dotenv": "16.4.1",
     "express": "4.18.2",
     "file-loader": "6.2.0",
+    "googleapis": "131.0.0",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-bootstrap": "2.10.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.49.3",
     "react-router-dom": "6.21.3",
     "style-loader": "3.3.4",
     "webpack": "5.90.0"
