--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.3",
     "react-router-dom": "6.21.3",
+    "sequelize": "6.35.2",
     "style-loader": "3.3.4",
     "webpack": "5.90.0"
   },
