--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "7.23.7",
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
+    "@tanstack/react-table": "8.11.7",
     "babel-loader": "9.1.3",
     "bootstrap": "5.3.2",
     "css-loader": "6.9.1",
@@ -45,5 +46,11 @@
     "webpack-dev-middleware": "7.0.0",
     "webpack-dev-server": "4.15.1",
     "webpack-hot-middleware": "2.26.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "helpers/*.js",
+      "client/*/*.js"
+    ]
   }
 }
