--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@babel/core": "7.23.7",
     "@babel/preset-env": "7.23.8",
     "@babel/preset-react": "7.23.3",
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "@fortawesome/free-regular-svg-icons": "6.5.1",
+    "@fortawesome/free-solid-svg-icons": "6.5.1",
+    "@fortawesome/react-fontawesome": "0.2.0",
     "@tanstack/react-table": "8.11.7",
     "babel-loader": "9.1.3",
     "bootstrap": "5.3.2",
