--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-table": "8.11.7",
     "babel-loader": "9.1.3",
     "bootstrap": "5.3.2",
+    "cheerio": "1.0.0-rc.12",
     "css-loader": "6.9.1",
     "dotenv": "16.4.1",
     "express": "4.18.2",
