--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "file-loader": "6.2.0",
     "googleapis": "131.0.0",
     "lodash": "4.17.21",
+    "pg": "8.11.3",
+    "pg-hstore": "2.3.4",
     "react": "18.2.0",
     "react-bootstrap": "2.10.0",
     "react-dom": "18.2.0",
@@ -46,6 +48,7 @@
     "eslint-plugin-react": "7.33.2",
     "html-webpack-plugin": "5.6.0",
     "react-refresh": "^0.14.0",
+    "sequelize-cli": "6.6.2",
     "terser-webpack-plugin": "5.3.10",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "7.0.0",
