--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,7 @@
 BS_THEME=[dark|light]
-PORT
+PORT=[3000]
 
-SHEET_ID
-GOOGLE_APPLICATION_CREDENTIALS
+# Database (SQL)
+PG_USER=[user]
+PG_PASSWORD=[password]
+PG_DEV_DB_NAME=[your_database_name]
